--- a/css/tooplate-gymso-style.css
+++ b/css/tooplate-gymso-style.css
@@ -363,7 +363,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
   -----------------------------------------*/
 
   .hero {
-    background-image: url('../images/hero-bg.jpg');
+    background-image: url('../images/fwave1.gif');
     background-size: 1920px 1080px;
     background-position: top;
     background-repeat: no-repeat;
